@@ -1,3 +1,4 @@
 Manifest-Version: 2.0
-Main-Class: org.jcrontab.jcrontab
+Main-Class: org.jcrontab.Jcrontab
+Class-path: log4j-1.2.jar
 Created-By: 1.2 (Sun Microsystems Inc.) 
